--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-.terraform/providers/registry.terraform.io/hashicorp/aws/5.37.0/darwin_arm64/
+.terraform/providers/registry.terraform.io/hashicorp/aws/5.37.0/darwin_arm64/terraform-provider-aws_v5.37.0_x5
